--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular2-flash-messages": "^3.0.1",
+    "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.5.0",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "rxjs": "~6.2.0",
+    "rxjs-compat": "^6.5.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
